--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<title>LaBonneGraine</title>
 </head>
 <body>
+	 <!-- Navbar -->
 	<div class="navbar">
-		<div class="dropdown">
+		<!-- <div class="dropdown">
 			<button class="dropbtn">GRAINES</button>
 			<div class="dropdown-content">
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -23,7 +24,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -32,7 +33,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -41,7 +42,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -50,7 +51,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -59,7 +60,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -68,7 +69,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -77,7 +78,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -86,7 +87,7 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
 		</div>
 
 		<div class="dropdown">
@@ -95,11 +96,101 @@
 				<a href="#">Link 1</a>
 				<a href="#">Link 2</a>
 				<a href="#">Link 3</a>
-			  </div>
+			</div>
+		</div> -->
+	</div>
+
+	<div class="breadcrumb">
+		Accueil > Graines Potagères > Betteraves > Betterave Blanche Avalanche
+	</div>
+
+	<div class="main_title">
+		<p>BETTERAVE BLANCHE AVALANCHE F1</p>
+		<img class="notes" src="assets/hand-drawn-shooting-star.svg" alt="note">
+		<p class="notes">3 avis</p>
+	</div>
+ <!-- Product's main infos  -->
+	<div class="product_infos">
+		<div class="product">
+			<img class="main_product_pic" src="assets/betterave.png" alt="product's picture">
 		</div>
 
-	<div class="produit">
+		<div class="available">
+			<p>Disponibilité: </p>
+			<p class="stock"> EN STOCK</p>
+		</div>
 		
+		<div class="quantity">
+			<p>Quantité: </p>
+			<input type="number" name="quantité" id="quantity">
+		</div>
+
+		<div class="quantity">
+			<p>Total: </p>
+			<p class="price">9,30€</p>
+			<p> (Ports inclus) </p>
+		</div>		
 	</div>
+
+	<div class="characteristics ">
+		<h2>Caractéristiques de la semence: </h2>
+		<hr class="solide">
+		<div class="elements">
+			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			<h3>Quand Planter ? </h3>
+			<p>Mars à Mai</p>
+		</div>
+		<div class="elements">
+			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			<h3>Où Planter ?</h3>
+			<p>Ensoleillé</p>
+		</div>
+		<div class="elements">
+			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			<h3>Quel Support ?</h3>
+			<p>Pleine terre</p>
+		</div>
+		<div class="elements">
+			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			<h3>Temps de pousse ?</h3>
+			<p>3 mois</p>
+		</div>
+		<div class="elements">
+			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			<h3>Quand Planter ? </h3>
+			<p>Mars à Mai</p>
+		</div>
+	</div>
+
+	<div class="More">
+		<h2>En savoir plus: </h2>
+		<hr class="solide">
+
+		<h4>Nom botanique: </h4>
+		<p class="more_infos">
+			Beta vulgaris
+		</p>
+		<h4>Conseils pratiques: </h4>
+		<p class="more_infos">
+			On peut semer sur couche ou en pépinière en mars-avril avant un repiquage en place début mai. On peut semer sur place début mai pour une production hivernale. Dans ce cas, semer 4 à 5 graines tous les 20 cm et éclaircir ensuite pour ne conserver que les plus vigoureux.
+		</p>
+		<h4>Entretien du sol: </h4>
+		<p class="more_infos">
+			Binages et sarclages réguliers. Un paillage en été pourra être nécessaire. 
+		</p>
+		<h4>Arrosage: </h4>
+		<p class="more_infos">
+			Arrosages réguliers nécessaires.
+		</p>
+		<h4>Récolte: </h4>
+		<p class="more_infos">
+			On récolte avant les gelées ou en fonction des besoins. Coupez les racines et les feuilles et les laisser sécher sur le sol.
+		</p>
+		<h4>Conservation: </h4>
+		<p class="more_infos"> 
+			Les betteraves seront ensuite conservées en cave ou en silo, dans du sable (comme les carottes).
+		</p>
+	</div>
+
 </body>
 </html>
