--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 	<div class="main_title">
 		<p>BETTERAVE BLANCHE AVALANCHE F1</p>
-		<img class="notes" src="assets/hand-drawn-shooting-star.svg" alt="note">
-		<p class="notes">3 avis</p>
+		<img class="score" src="assets/hand-drawn-shooting-star.svg" alt="note">
+		<p class="score">3 avis</p>
 	</div>
  <!-- Product's main infos  -->
 	<div class="product_infos">
@@ -132,7 +132,7 @@
 		</div>		
 	</div>
 
-	<div class="characteristics ">
+	<div class="page_section">
 		<h2>Caractéristiques de la semence: </h2>
 		<hr class="solide">
 		<div class="elements">
@@ -162,7 +162,7 @@
 		</div>
 	</div>
 
-	<div class="More">
+	<div class="page_section">
 		<h2>En savoir plus: </h2>
 		<hr class="solide">
 
@@ -192,5 +192,88 @@
 		</p>
 	</div>
 
+	<div class="page_section">
+		<h2>Qu'en pensent nos clients ?</h2>
+		<hr class="solide">
+
+		<div class="mark_left">
+			<p class="average_mark">3.8</p>
+			<img class="score" src="assets/hand-drawn-shooting-star.svg" alt="note">
+			<p>5 avis</p>
+		</div>
+		<div class="mark_right">
+			
+
+		</div>
+
+		<div class="customers">
+			
+
+
+		</div>
+	</div>
+
+	<div class="confidence">
+		<div class="conf_elements">
+			<img src="" alt="" class="conf_picture">
+			<p class="conf_text">10% DE REMISE IMMÉDIATE DÈS 100 € D’ACHATS</p>
+		</div>
+
+		<div class="conf_elements">
+			<img src="" alt="" class="conf_picture">
+			<p class="conf_text">EXPÉDITION SOUS 48/72H</p>
+		</div>
+
+		<div class="conf_elements">
+			<img src="" alt="" class="conf_picture">
+			<p class="conf_text">PAIEMENT SÉCURISÉ</p>
+		</div>
+
+		<div class="conf_elements">
+			<img src="" alt="" class="conf_picture">
+			<p class="conf_text">UN VASTE CHOIX DE LÉGUMES ANCIENS ET ORIGINAUX</p>
+		</div>
+	</div>
+
+			<h2> Vous pourriez en avoir besoin: </h2>
+			
+			
+	
+		<!-- ---------------------------------------------->
+
+		<section class="carousel" id="2">
+
+			<h2> Dans la même catégorie: </h2>
+            <ul class="carousel-items">
+				<li class="carousel-item">
+                    <div class="card">
+                        <h2 class="card-title">Betterave</h2>
+                        <img src="assets/betterave.png" class="card_img"/>
+                        <div class="card-price">
+                            <p>2,40€</p>
+                        </div>
+                    </div>
+				</li>
+				<li class="carousel-item">
+                    <div class="card">
+                        <h2 class="card-title">Betterave</h2>
+                        <img src="assets/betterave.png" class="card_img"/>
+                        <div class="card-price">
+                            <p>2,40€</p>
+                        </div>
+                    </div>
+				</li>
+				<li class="carousel-item">
+                    <div class="card">
+                        <h2 class="card-title">Betterave</h2>
+                        <img src="assets/betterave.png" class="card_img"/>
+                        <div class="card-price">
+                            <p>2,40€</p>
+                        </div>
+                    </div>
+				</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
