--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 		<img class="score" src="assets/hand-drawn-shooting-star.svg" alt="note">
 		<p class="score">3 avis</p>
 	</div>
+
  <!-- Product's main infos  -->
 	<div class="product_infos">
 		<div class="product">
@@ -132,35 +133,61 @@
 		</div>		
 	</div>
 
-	<div class="page_section">
+	<section class="page_section">
 		<h2>Caractéristiques de la semence: </h2>
 		<hr class="solide">
+
 		<div class="elements">
-			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
-			<h3>Quand Planter ? </h3>
-			<p>Mars à Mai</p>
+			<div class="elements_img">
+				<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			</div>
+			<div class="elements_text">
+				<h3>Quand Planter ? </h3>
+				<p>Mars à Mai</p>
+			</div>
 		</div>
+
 		<div class="elements">
-			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
-			<h3>Où Planter ?</h3>
-			<p>Ensoleillé</p>
-		</div>
+			<div class="elements_img">
+				<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			</div>
+			<div class="elements_text">
+				<h3>Où Planter ?</h3>
+				<p>Ensoleillé</p>
+			</div>
+		</div>	
+
 		<div class="elements">
-			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
-			<h3>Quel Support ?</h3>
-			<p>Pleine terre</p>
-		</div>
+			<div class="elements_img">
+				<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			</div>
+			<div class="elements_text">
+				<h3>Temps de pousse ?</h3>
+				<p>3 mois</p>
+			</div>
+		</div>	
+
 		<div class="elements">
-			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
-			<h3>Temps de pousse ?</h3>
-			<p>3 mois</p>
-		</div>
+			<div class="elements_img">
+				<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			</div>
+			<div class="elements_text">
+				<h3>Quel Support ?</h3>
+				<p>Pleine terre</p>
+			</div>
+		</div>	
+
 		<div class="elements">
-			<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
-			<h3>Quand Planter ? </h3>
-			<p>Mars à Mai</p>
-		</div>
-	</div>
+			<div class="elements_img">
+				<img src="assets/shovel-hand-drawn-tool.png" alt="" class="shovel">
+			</div>
+			<div class="elements_text">
+				<h3>Quand arroser ?</h3>
+				<p>2 x par semaine</p>
+			</div>
+		</div>	
+	
+	</section>
 
 	<div class="page_section">
 		<h2>En savoir plus: </h2>
@@ -235,15 +262,46 @@
 		</div>
 	</div>
 
-			<h2> Vous pourriez en avoir besoin: </h2>
-			
+			<!-- <section class="carousel" id="1">
+
+				<h2 class="carousel_title"> Vous pourriez en avoir besoin: </h2>
+				<ul class="carousel-items">
+					<li class="carousel-item">
+						<div class="card">
+							<h2 class="card-title">Betterave</h2>
+							<img src="assets/betterave.png" class="card_img"/>
+							<div class="card-price">
+								<p>2,40€</p>
+							</div>
+						</div>
+					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<h2 class="card-title">Betterave</h2>
+							<img src="assets/betterave.png" class="card_img"/>
+							<div class="card-price">
+								<p>2,40€</p>
+							</div>
+						</div>
+					</li>
+					<li class="carousel-item">
+						<div class="card">
+							<h2 class="card-title">Betterave</h2>
+							<img src="assets/betterave.png" class="card_img"/>
+							<div class="card-price">
+								<p>2,40€</p>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</section> -->
 			
 	
 		<!-- ---------------------------------------------->
 
 		<section class="carousel" id="2">
 
-			<h2> Dans la même catégorie: </h2>
+			<h2 class="carousel_title"> Dans la même catégorie: </h2>
             <ul class="carousel-items">
 				<li class="carousel-item">
                     <div class="card">
